--- a/KeaWatch/KeaWatch/Base.lproj/Main.storyboard
+++ b/KeaWatch/KeaWatch/Base.lproj/Main.storyboard
@@ -266,7 +266,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xyd-BR-tQ5" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2076" y="2595.6521739130435"/>
+            <point key="canvasLocation" x="1721" y="2602"/>
         </scene>
     </scenes>
     <resources>
